--- a/voda.tex
+++ b/voda.tex
@@ -1404,5 +1404,20 @@ Nakonec dáváme ještě Mumlavku, Slávoš posílá v pohodě i jez, ale na dal
 \info[Kamenice]{5.3.}{$8m^3/s$}
 \usek{Klasika}
 
+Se Zuzkou a nějakym jejím kámošem, jedeme 2 pohodový jízdy, ráno nás dokonce i vemou do vlaku :) Pohodička...
+
+\akce{Šumava}
+\datum[19.3.]
+
+\info[Kremelna]{19.3.}{$25m^3/s$}
+\usek{Od mostu na Prášily}
+
+Chystáme se na Wolfi, ale Vojta večer píše, jestli nedáme Křemelnou. Tak dáme :) Kuba se Štěpou a Michalem doráží večer do Budějc, dáváme vstávačku ve 3:30, ve 4 odjezd a v půl šestý se převlíkáme v Radešově. Rychlej přesun na nasedačku ještě za šera a v 6 už jsme na vodě. Kousek popojedem a čekáme na Vojtu, kterej doráží o 15 min pozdějc. Vody máme plný koryto a je to super. Na začátku pár kilometrů krásná kochačka, pak příde horizont a hned první peřej je ta největší z celý řeky. Je to ale celkem na pohodu, lajna středem. Někdy cca za mostem to začne víc tect, je to poměrně kontinuální, ale na pohodu, všechno WW3, pár míst o trochu těžší. Nejvíc je potřeba dávat pozor na stromy, ale přenášet musíme jenom jeden, další 3 se daj objet. Cestou je tam pár zábavnějích válečků, ale žádný drama. Jinak příroda je fakt nádherná, rozhodně to stojí i za to vstávání. Nakonec dojíždíme až do Rejštejna, Čenkárna má něco kolem 70 kubíků, takže taky pohodový pohoupání...
+
+
+\info[Wolfsteiner Ohe]{19.3.}{$130~cm$ Fürsteneck }
+\usek[Freyung]{Ringelai}
+
+Premiéra na Wolfi za poměrně slušný vody. Přidává se k nám Venca a Víťou a 2 nějaký experti, který postupem času odpadávaj. Nasedá se na jeden z přítoků, až na soutok se dá jet všechno na oči, i když to celkem teče. Kousek za soutokem prohlížíme docela solidní válce, lajna je jak vlevo, tak v pravo. Pak následuje několik peřejí WW3-4, místy se schopnýma válcema, ale neni to zas tak kontinuální, takže to jde jet na oči, ale zadarmo to není. V půlce příde fabrika na levý straně a jez, cca 500m od tud začíná asi nejtěžší sekce. Kdyby bylo fakt hodně nakoupeno, tak tady by se dalo skončit, vede sem silnice. Asi to není těžší než ten hořejšek, ale je to víc kontinuální. Prohlížíme v podstatě celej tenhle úsek, asi nemá smysl popisovat jednotlivý peřeje, stejně si je nepamatuju. Nicméně všechno je jetelný, strom je jenom jeden a dá se podjet. Štěpán už spodek nejde, Kuba s Michalem jedou jenom kus a zbytek nesou. Nicméně neni to tak dramatický, všichni 4 to jedem celkem v pohodě. Pak už je na konci asi jenom 500m dojezd a vysedačka na pravý straně.
 
 \end{document}.
