--- a/voda.tex
+++ b/voda.tex
@@ -1420,4 +1420,48 @@ Chystáme se na Wolfi, ale Vojta večer píše, jestli nedáme Křemelnou. Tak d
 
 Premiéra na Wolfi za poměrně slušný vody. Přidává se k nám Venca a Víťou a 2 nějaký experti, který postupem času odpadávaj. Nasedá se na jeden z přítoků, až na soutok se dá jet všechno na oči, i když to celkem teče. Kousek za soutokem prohlížíme docela solidní válce, lajna je jak vlevo, tak v pravo. Pak následuje několik peřejí WW3-4, místy se schopnýma válcema, ale neni to zas tak kontinuální, takže to jde jet na oči, ale zadarmo to není. V půlce příde fabrika na levý straně a jez, cca 500m od tud začíná asi nejtěžší sekce. Kdyby bylo fakt hodně nakoupeno, tak tady by se dalo skončit, vede sem silnice. Asi to není těžší než ten hořejšek, ale je to víc kontinuální. Prohlížíme v podstatě celej tenhle úsek, asi nemá smysl popisovat jednotlivý peřeje, stejně si je nepamatuju. Nicméně všechno je jetelný, strom je jenom jeden a dá se podjet. Štěpán už spodek nejde, Kuba s Michalem jedou jenom kus a zbytek nesou. Nicméně neni to tak dramatický, všichni 4 to jedem celkem v pohodě. Pak už je na konci asi jenom 500m dojezd a vysedačka na pravý straně.
 
+
+\akce{Jizerky}
+\datum[31.3-2.4.]
+
+Konečně se po pár letech v Čechách objevuje něco jako jarní tání a Jizerky tečou dýl než jedno odpoledne. V pátek ve 2 vyrážim s Jelenem na Mejto, Kuba je tam už od čtvrtka a plánuju se k němu připojit.
+
+Charakter je takovej, že přes den to klesá, kolem třetí odpoledne se to zlomí a před půlnocí bejvá nejvíc. Takže obvykle neni kam spěchat, nejlepší voda je večer. Takhle to kulminuje asi 5 dní v kuse, každej den se to zastaví o kus vejš, což je super.
+
+\info[Mumlava + Jizera]{31.3.}{$9m^3/s$}
+\usek{Klasika pod ostrov}
+
+Na Mejtě se potkáváme s Kubou a Boleslavákama, jedeme nejdřív Mumlavku pod ostrov a pak dáváme v různym složení ještě $2\times$ Mumlavu. Poslední jízdu jedem s Kubou, Slávošem a Márou za 10ti, tak se konečně rozhoupu nasmahnout jez, když to Slávoš najede. Je to víc v pohodě než sem myslel, ale chce se to trefit (Kuba málem trefuje levou skálu :).
+
+\cara
+Večer jedem do Jablonce, kde spíme s Kubou u Vojty, což je bomba.
+
+\info[Kamenice]{1.4.}{$12m^3/s$}
+\usek{Klasika}
+
+Ráno začínáme v klidu na Kamendě, Vojta bere Míšu na topo duo, takže si jedeme pohodovou jízdu, jez neseme. Dole akorát stíháme rychlík, dokonce nás berou i stim obřím topíčkem, takže pohoda. Dáváme oběd a přejíždíme na Mejto.
+
+\info[Kamenice]{1.4.}{$13m^3/s$}
+\usek{Od železničáku}
+
+Ještě je brzo, tak si to s Kubou vynášíme po pravym břehu kousek nad železničák a dáváme si na pohodu horní Jizeru. Moc vody neni, ale dá se to jet. Všechno je v pohodě, akorát Cutisin jedu jak debil, míjim levej boof a padám tak tak podivně bokem... Naštěstí za týhle vody je to dost jedno. Jedeme to za 40 minut.
+
+\info[Mumlava]{1.4.}{$10m^3/s$}
+\usek{Klasika}
+
+Pak dáváme jednu Mumlavku  (teď už s jezem) s Jizerou do zatáčky, pohodový pádlování :) 
+
+\info[Jizerka]{1.4.}{$2.5m^3/s$}
+\usek{Klasika na Mejto}
+
+Nakonec se rozhoupem na Jizerku, i když to nemá moc vody. Nasedáme v 18:00, takže to máme tak akorát. Moc vody to opravdu nemá, je to trochu pojeb, ale jak sem to jel před měsícem, tak si to eště docela dobře pamatuju a dá se to. To Kuba si to naopak nepamatuje vůbec a hned v peřeji za prvnim dropem krysí, jede moc vlevo, najebe ho to tam na šutry a zvrhne ho to na ně, tak jde nakonec nějak ven... Naštěstí je to poslední taková sranda, zbytek včetně Jizery už dojíždíme bez větších komplikací. Jizera od odpoledne lehce nastoupala tak na 17 kubíků, takže je to lepší, než první jízda. Tentokrát i ten Cutisin zvládnu naboofnout :) Dojíždíme někdy akorát za šera po půl osmý.
+
+\cara
+Spíme na Mejtě spolu se Slávošem, Danem a Kozáčem a dáváme decentní párty u Dana v autě.
+
+\info[Mumlava]{2.4.}{$7.5m^3/s$}
+\usek{Klasika}
+
+Kuba potřebuje bejt v Praze dřív, takže v neděli dopoledne už jedeme "jenom" Mumlavu. Dáváme 3 runy kolem 8mi kubíků, všechny jedeme jez, takže už mám docela i pocit, že ho umim najet na správnym místě  a nad hranou nejsem moc nervózní. Jinak je to bomba, Mumlava je prostě supr závaná. Poslední jízdu jedem pod ostrov do zatáčky a frčíme domu. Shodujem se, že i když sme nejezdili žádný velký hrůzy, tak to byl fakt bombovej víkend. Kéž by ty Jizerky tekly častějc....
+
 \end{document}.
