--- a/voda.tex
+++ b/voda.tex
@@ -1464,4 +1464,76 @@ Spíme na Mejtě spolu se Slávošem, Danem a Kozáčem a dáváme decentní pá
 
 Kuba potřebuje bejt v Praze dřív, takže v neděli dopoledne už jedeme "jenom" Mumlavu. Dáváme 3 runy kolem 8mi kubíků, všechny jedeme jez, takže už mám docela i pocit, že ho umim najet na správnym místě  a nad hranou nejsem moc nervózní. Jinak je to bomba, Mumlava je prostě supr závaná. Poslední jízdu jedem pod ostrov do zatáčky a frčíme domu. Shodujem se, že i když sme nejezdili žádný velký hrůzy, tak to byl fakt bombovej víkend. Kéž by ty Jizerky tekly častějc....
 
+\akce{SKG}
+\datum[14-16.4.]
+
+Vyrážíme se Štěpou do SKG s tim, že se připojíme k Budějčákům a případně Slávošovi.
+
+\info[Koppentraun]{14.4.}{$110cm$}
+\usek{Klasika}
+
+Začínáme na Kopáči, kde se kolem poledne potkáváme s budějčákama. Neni nijak extra moc vody, ale pár let sem to nejel, takže to neni tak zlý. Dáváme jenom jednu jízdu, neni to ani zas takovej zázrak...
+
+\info[Lammer]{14.4.}{$55cm$ Obergau}
+\usek{Lammeroffen}
+
+Odpoledne si dáváme sami se Štepou 2 jízdy na Lammeru, taky neni moc vody, ale za tohodle stavu je to vcelku technický, docela zábavný. Lammer je sice zavřenej, ale v pátek odpoledne se tam nic neděje, tak to neřešíme.
+
+\info[Lammer]{15.4.}{$55cm$ Obergau}
+\usek{Lammeroffen}
+
+Ráno dáváme eště asi 3 jízdy na Lammeru a přejíždíme za Slávošem na Lofer.
+
+\info[Saalach]{15.4.}{~$30m^3/s,~43cm$ Unterjettenberg}
+\usek{Lofer}
+
+Dáváme jednu jízdu na Loferu s Karlem Harantem a Kubou. Pohodovej stav, žádný velký drama. Na další jízdu sme líný a přesouváme se na večírek na štěrkovnu.
+
+\info[Saalach]{16.4.}{~$40m^3/s,~51cm$ Unterjettenberg}
+\usek{Lofer}
+
+Další den dáváme znovu Lofer, tentokrát bez Štpána, kterýmu se jednak na nakoupenj Lofer nechce, navíc je sám eště dost nakoupenej :) Je to už docela poctivý, s Mílou si přenesem začátek trojkomba, moc se nám do toho nechce, nicméně měl sem to poslat, všichni to dávaj poměrně s přehledem. Lžíce a esíčko už sou v pohodě, zbytek taky. Do další jízdy se nám ale už moc nechce, někdo si to eště jednou dá a pak se přesouváme na Lammer.
+
+\info[Lammer]{16.4.}{$85cm$ Obergau}
+\usek{Lammeroffen}
+
+Ráno dáváme asi $4\times$ Lammer, máme výrazně víc vody a je to super. Nějaký jízdy dáváme v hroznym davu, pak se s Mílou odpojujeme a jedem 2 rychlý jízdy (nasedačka - popelník za 6 min). My se Štěpánem se nakonec vracíme domu už v neděli (je celkem hnusně), zbytek tam zůstává ještě do pondělí....
+
+\akce{Labíčko}
+\datum[21.-23.4.]
+
+S Jelenem, Vojtou Pražanem a Šímou vyrážíme na Labe. V plánu je spát u Fíka na chatě, což je bomba. Přehrada se bude opravovat, takže Krakonošovo Labíčko nemá bejt další 4 roky. Nikdy sem tu nebyl, tak je to v podstatě povinnost.
+
+\info[Labe]{21.4.}{$19m^3/s$}
+\usek{Od přehrady}
+
+V pátek jedeme jednu jízdu od přehrady, nikdy sem to nejel, takže sem za to docela rád. Celý je to poměrně v pohodě, labská soutězka je závabná, Vrchlabská taky. Je tam pár jazů, ale všechno kromě předposledního (ve Vrchlabí) je poměrně v klidu jetelný. Jeden jez teda najíždim dost blbě po koze vpravo, hodí mě to přímo do válce pod nim a trochu tam bojuju, ale asi po minutě pochopim, na který straně to odtejká a vytáhnu se z toho. Dole už stihneme jenom $2\times$ otočit Vrchlabskou, než nám dojde voda.
+
+\cara
+Spíme na chatě u Fíka, párty je poměrně slušná, co si budem :)
+
+\info[Labe]{21.4.}{$19m^3/s$}
+\usek{Vrchlabská}
+
+V sobotu jenom zevlíme na Vrachlabský, jede se slalom a sprint. Nemám to vůbec najetý, ale neni tam zas tak moc co vymejšlet. Ve slalomu i sprintu končim 20. ze 60ti, vždycky tam udělám nějakou poměrně hloupou chybu, takže celkem bída.. Ale výsledky sou trochu pochybný, maj problémy s časomírou. Cross se už nestíhá a přesouvá se na další den. Sice sem chtěl jet se Štěpánem domu, ale nakonec zůstávám i na neděli.
+
+\info[Labe]{22.4.}{$19m^3/s$}
+\usek{Vrchlabská}
+
+Ráno se jede cross, sejde se nás jenom 16, hodně lidí odjelo nebo se jim po večírku nechce ve vánici převlíkat do hydra. V první rozjížďce sem sem druhej a postupuju, v další (což už je semifinále) se neprobiju na startu a dojíždim poslední. Kluci pak ještě vyráží nahoru dát si to celý, mě se moc nechce, tak si v klidu asi $8\times$ otočim Vrchlabskou a pak vyrážíme domu....
+
+\akce{Piemáč}
+\datum[29.4. - 8.5.]
+
+Vyrážíme do Piemáče ve složení Kuba, Vojta, Štěpán a má se k nám po vlastní ose přidat Pája. Vyrážíme z prahy včas v půl čtvrtý ze Zličnína a před půlnocí sme na Moese. Moesa je suchá, ráno jedem rovnou na Verzascu.
+
+\info[Verzasca]{29.4.}{$15m^3/s$}
+\usek{Střední + Spodní}
+
+Neni moc vody, ale klukům se chce dát si i střední, tak to jedeme celý. Neni to kupodivu tak hrozný, jak sem si myslel, docela se to dá, žádná extrémní jebačka. Navíc celou střední jednu bez prohlížení, kluci občas na něco kouknou, ale všechno je stejný jako vždycky. Jedem celkem v pohodě, první věc co zkoumáme je až ta peřej před žebrama. Já jí tak nějak ze zvyku přenášim (ani nevim proč), Vojta jí pak jede a je to dost v pohodě. Žebra vypadaj docela jetelně, Kuba se rozhoupe jako první a dává to dobře, tak jedu taky. Můj pocit je, že je to mnohem lehčí, než to vypadá, za týhle vody je to jenom o tom nájezdu, poslat to do prava a pak už je to na konci jenom snadnej boof. Vojta jede taky v pohodě, Štěpa s Pájou nesou. Esíčko pod cave dropem za týhle vody vypadá celkem blbě, ale jedeme v pohodě. Peřej ve vesnici za mostem jedeme chicken lajnou vlevo, za týhle vody je to už docela hraniční, ale dá se to. Prsty prohlížíme, vypadá to OK, tak jedu první. Lajna úplně v pohodě, naskočim si na roládu ve vstupu a pak už celý v klidu vpravo. Pak dáváme všechny peřeje až k přenášce v pohodě. Největší problémy máme asi v peřeji, kde se končí boofem hodně vlevo. Vojta jede na pohodu, já sem ale moc brzo vlevo u skály, to mě hodí na střed a pak nemůžu dostat včas zpátky doleva. Lajna nic moc, ale namáčklej pod tim šutrem nezůstanu a odeskymuju to. Ostatní lajny taky žádnej zázrak, nejlíp to najede Kuba, ale pak se nějak zvrhne a vypadne z lodi a nakonec krysí :D. Další 2 dropy dáváme docela v pohodě (jenom ten první tradičně najedu jak kokot). Poslední peřej jede první Vojta, zkončí v levym vracáku, kterej je fakt nechutnej (za týhle malý vody). Vytřpitkujeme ho a končíme. Jedem to celkem s prohlíženim a jištěnim 4,5h, tak už se nikomu nadalší jízdu nechce.
+
+\cara
+
+Timhle pádlování na týhle akci končí. Spíme na hoře jako vždycky, ucházející večírek, sejde se nás tam hromada známejch :) Ráno jedem na Rovanu, ale ta má málo a jak to tak prohlížíme, tak je to docela jebka. Kalifornie mě nijak moc neláká ale pokud jí chce člověk přenášet, tak nemá smysl na tu řeku vůbec jezdit. Možná je to za větší vody lepší, ale těžko říct. Tak přejíždíme na Isorno do termálů, že aspoň kouknem jak Isorno vypadá. Nicméně termály maj 28 stupňů, což popravdě neni moc, takže nás to taky moc nenadchne, ale aspoň sme nascoutovali slajd na Isornu. Sice ta cesta na nasedačku a z vysedačky musí bejt extrém, ale jednou by bylo dobrý si to dát. Spíme na Ribu (to je úplně suchý) a čekáme na déšť. Déšť ale ráno plynule přejde ve sníh i u nás na spacím místě, natož pak nahoře na kopcích. Předpověď moc vyhlídky taky nezlepšuje, tak na to kašlem a jedem domu. Je to dobrý rozhodnutí, další dny by nebylo na pádlování fakt nic.
+
 \end{document}.
