--- a/voda.tex
+++ b/voda.tex
@@ -1536,4 +1536,45 @@ Neni moc vody, ale klukům se chce dát si i střední, tak to jedeme celý. Nen
 
 Timhle pádlování na týhle akci končí. Spíme na hoře jako vždycky, ucházející večírek, sejde se nás tam hromada známejch :) Ráno jedem na Rovanu, ale ta má málo a jak to tak prohlížíme, tak je to docela jebka. Kalifornie mě nijak moc neláká ale pokud jí chce člověk přenášet, tak nemá smysl na tu řeku vůbec jezdit. Možná je to za větší vody lepší, ale těžko říct. Tak přejíždíme na Isorno do termálů, že aspoň kouknem jak Isorno vypadá. Nicméně termály maj 28 stupňů, což popravdě neni moc, takže nás to taky moc nenadchne, ale aspoň sme nascoutovali slajd na Isornu. Sice ta cesta na nasedačku a z vysedačky musí bejt extrém, ale jednou by bylo dobrý si to dát. Spíme na Ribu (to je úplně suchý) a čekáme na déšť. Déšť ale ráno plynule přejde ve sníh i u nás na spacím místě, natož pak nahoře na kopcích. Předpověď moc vyhlídky taky nezlepšuje, tak na to kašlem a jedem domu. Je to dobrý rozhodnutí, další dny by nebylo na pádlování fakt nic.
 
+
+\akce{Rakousko}
+\datum[6.5. - 8.5.]
+
+Další prodlouženej víkend namísto Piemáče vyrážíme aspoň do Rakouska. Jedeme jenom s Vojtou, nikomu dalšímu se nechce.
+
+\info[Brandenberger Ache]{6.5.}{$55cm$}
+\usek{Kaiserklamm to Tiefenbachklamm}
+
+Na Brandy dorážíme večer, spíme stejně jako asi dalších 50 lidí u řeky na pláccích pod Kaiserklammem. Ráno si vynášíme Kaiserklamm a máme v plánu to jet celý až dolu. Voda je taková nižší střední, takže na mojí premiéru ideální :) Kaiserklamm je v pohodě, celej ho prohlídnem cestou nahoru ze stezky, takže žádný překvápko. Pod tim se pak jede asi 3km dvojkový vody a pak ještě možná 2km trochu zajímavější 3+ vody, jediný zajímavý místo je asi drop přes celou řeku u Pineggu. Jedeme ho středem, za větší vody by se jel asi úplně vpravo. Tiefenbachklamm začíná lávkou přes řeku. Až po paprsek všechno jedeme bez prohlížení, Vojta si to lehce pamatuje, ale všechno se to dá jet na oči. Paprsek má dost málo vody, takže to neseme. Pod paprskem stojí za zmínku slajd pod mostem, kde to vpravo padá do takovýho podivnýho slotu, jednoduchá lajna je po slajdu u levý strany řeky. Nejvýraznější místo je asi slajdík v levý zatáčce. Najíždíme to úplně zleva, pak je potřeba udělat traverz na pravou stranu a druhá část se jede tak metr od pravýho břehu a pak dole pravej střed. Hned zatim je válec přes celou řeku, dá se jet buď jednodušší lajna boof vlevo, nebo i v pravo podél břehu. Jedeme to $2\times$, první jízdu z lehkym prohlíženim 2h 15min, druhou jízdu zvládáme o hodinu rychlejc.
+
+\cara
+Večer jedeme na Lofer s štěrkovnu.
+
+
+\info[Unkenbach]{7.5.}{střední voda}
+\usek{Eiblklamm a až na soutok}
+
+Do rána Lofer nastoupá na 70 kubíků a do toho se mi nijak zvlášť nechce, tak se jedem podívat na Unkáč. Tam potkáme Havelky, takže nám to trochu usnadní hledání Eiblklammu. Musí se jet cestou podél řeky do zákazu vjezdu, ale je to tam dost opuštěný, takže by to snad neměl bejt takovej problém. Soutěska je pěkná, ale neni to žádný drama. První drop je čistej boof středem (je to docela větší než se zdá, ale padá se do měka). Pak je to jenom o tom projet nějak ten slot, dá se tam i vejít s jednim záběrem, dropík na konci slotu má asi 1m, což ze shora není poznat. Poslední drop se jede úplně doleva, je to tak 4m, na pohodu.
+
+Pak jedeme asi 3km štěrkovištěm, kde neni moc vody, ale dá se to. Jeden jez po cestě je eště docela velkej, tak 4-5m. Spodní soutězska je docela hezká, ale chce to předem trochu zkouknout kvůli stromům. Začíná to takovym úzkym kaňonem, kde to docela teče, do toho je určitě potřeba nahlídnout. Pak je jedna větší peřej, která je vidět ze shora od silnice. Najíždíme úplně vpravo, pak středem. Dlaší peřej je zapadaná a přenášíme. Pak už tam neni nic dramatickýho, na oči dojíždíme. Celkově je to docela hezký, vodu máme asi poměrně optimální.
+
+\info[Schwarzbach]{7.5.}{střední až vyšší střední}
+\usek{Klasika}
+
+Zbytek jede na Schwarzbach, takže využíváme možnosti, že nám to někdo najede a vyrážíme taky. Nasedá se nad velkym silničnim mostem, je tam štěrková cesta doprava k řece k dalšímu mostu. Začátek je trochu vidět, takže si člověk může udělat lehkou představu a trovchu to zkouknout. Na záčátku je pár drobnejch peřejí a slajdíků na rozpádlování, po pár stech metrech přichází první drop (4m), jede se pravej střed levej boof. Hrana neni úplně kolmá takže je lepší ten boof lehce pozdržet. Potom je opět pár set metrů slajdíků a peřejek, jakmile se to začne víc sklápět, je potřeba jet do leva, objíždí se tam kámen uprostřed žeky zleva a pak až k dalšímu dropu se jede pořád vlevo aý levej střed. Druhej drop je asi největší (7m?), najíždí se s vodou u levý strany, začíná to takovou šikmou deskou a pak cca v půlce pravej boof, přistání je poměrně do měkka. Boofuju to opravdu poctivě, na dopadu si o pádlo trochu narazim ret, chce to bejt trochu opatrnější s přehnanym předklonem... Pak následuje hned malej dropík, jede se středem.Potom se chvíli nic moc neděje, je tam pravá zatáčka a po cca 100m je dobrý vysedout ve vracáku vpravo a na další věc se podívat. Je to takovej cca 2m boof na desku (najíždí se pravej střed), kde člověk nabere rychlost a hned je potřeba se srovnat na další slot s válcem, kterej se jede u pravý strany se špičkou co nejvíc směrem doprava, aby se nedalo čelo o protějí břeh. Já tam trochu zavadim, ale né tolik abych v tom válci zůstal. Hned následuje další drop (4m), jede se co nejvíc vlevo, ideálně na pravej boof. Já nejsem dost vlevo, nemám moc vody na záběr a zapadnu tam celkem bídně, ale po chvíli z toho vyeskymuju. Dole je docela lagunka a čas na oddych. Po dalších 100 metrech následuje další drop (5m), jede se u pravý strany, ideálně směrem zprava na střed. Já mám špičku doprava, sice odpálim boof, ale je tam trošku taková dvojitá hrana, o kterou zavadim zadkem a pošle mě to dolu po špičce, ale je to hodný a dá se z toho odjet. Hned následuje další dropík, kterej se jede ze středu směrem doprava, 1m boof a pak takovej rozbitej slajd. My to najíždíme víc vlevo na takovou roládu, taky se to dá, ale neni to optimální lajna. Záhy je poslední vodopád (5m), jede se opět u pravý strany ideálně se špičkou trochu na střed. Kousek za ním je 1m boof, jede se do prava. Po chvíli je jedna trochu větší peřej, která se jede pravej střed. Po 50m stavíme vpravo a prohlížíme nájed do takovýho nepěknýho válce. Těsně před nim se dá zastavit vpravo ve vracáku a po skále ho přenest. Za nim se to trochu víc sevře do kaňonu, ale už tam neni nic zásadního, jeden menší double drop, kterej se jede středem, druhej drop spíš doleva, v pravo je kapsa. Pak už neni žádná zásnadnější peřej, ještě to docela kontinuálně teče, ale všechno v pohodě čitelný na oči. Až se narazí na lávku, tak se přenáší vlevo poslední kombinace dropů. Potom už se jen dojede do Saalachu. 
+
+
+\info[Lammer]{7.5.}{85cm}
+\usek{Lammeroffen}
+
+Na Lammeru se potkáváme s Vencou, už se nám nechce moc pádlovat, ale Venca to chce dát a byl by sám, takže nakonec dáváme večer ještě 2 runy za pěkný vody.
+
+\cara
+Spíme pod mostem. Ráno má Lammer asi 130cm, ale kopáč má 150 a Lammer už sme jeli, tak jedem dát trochu big wateru.
+
+\info[Koppentraun]{8.5.}{$150cm$}
+\usek{Klasika}
+
+Dáváme Kopáč za pěkný vody, prohlížíme viděnou a neviděnou, ale všechno je to pomerně v pohodě. Válec ve vidění je poměrně přísnej, objíždíme zprava a pak jedem do levý lajny na bombovej kicker, kterej ale neni tak lehký trefit, dává to dobře jenom Venca. Neviděnnou jedeme celou zprava, v podstatě stejná lajna jako za malý vody. Zbytek už je v pohodě, všechno jetelný na oči. Na konci ještě potkáváme Alču s Mišuem, ten vyplava a je na pravym břehu, tak ho asi 20 min dostáváme na levej, ale nakonec se nám ho podaří přetáhnout. Jinak žádný větší drama, akorát chvátáme, tak dáváme jenom jeden run a jedeme domu.
+
 \end{document}.
